--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <!-- font awesome -->
+    <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -23,6 +23,39 @@
     />
   </head>
   <body>
+
+    <!-- Mobile Toogler Button For Adding A New Item -->
+    <div class="add__new__btn__mobile__only">
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addNewModal">
+        <i class="fas fa-plus"></i>Add New Item
+      </button>
+    </div>
+
+    <!-- Modal for Adding a New Item-->
+    <div class="modal fade" id="addNewModal" tabindex="-1" aria-labelledby="addNewModalLabel" aria-hidden="true" >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="addNewModalLabel">Add New Task</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" ></button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
@@ -48,26 +81,37 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
           </ul>
-
           <!-- Add a task -->
-          <button class="btn btn-outline-success" type="submit">
+          <button class="btn btn-outline-success" type="submit" data-bs-toggle="modal" data-bs-target="#addNewModal">
             <i class="fas fa-plus"></i>Add New Item
           </button>
         </div>
       </div>
     </nav>
-    <!-- main Container -->
+    <!-- Main Container -->
     <div class="container text-center">
       <section class="mt-4">
         <div class="row justify-content-center">
           <div class="col-md-6">
             <div class="input-group flex-nowrap shadow-lg">
-              <input type="search" class="form-control" placeholder="Search Task" aria-label="Username" aria-describedby="addon-wrapping">
+              <input
+                type="search"
+                class="form-control"
+                placeholder="Search Task"
+                aria-label="Username"
+                aria-describedby="addon-wrapping"
+              />
               <span class="input-group-text" id="addon-wrapping">
                 <i class="fas fa-search"></i>
               </span>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="mt-4">
+        <div class="row task__contents">
+          <h5>Hey miku the piku</h5>
         </div>
       </section>
     </div>
@@ -78,7 +122,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous">
-    </script>
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
