--- a/index.html
+++ b/index.html
@@ -23,24 +23,123 @@
     />
   </head>
   <body>
-
     <!-- Mobile Toogler Button For Adding A New Item -->
     <div class="add__new__btn__mobile__only">
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addNewModal">
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#addNewModal"
+      >
         <i class="fas fa-plus"></i>Add New Item
       </button>
     </div>
 
     <!-- Modal for Adding a New Item-->
-    <div class="modal fade" id="addNewModal" tabindex="-1" aria-labelledby="addNewModalLabel" aria-hidden="true" >
+    <div
+      class="modal fade"
+      id="addNewModal"
+      tabindex="-1"
+      aria-labelledby="addNewModalLabel"
+      aria-hidden="true"
+    >
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
             <h1 class="modal-title fs-5" id="addNewModalLabel">Add New Task</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" ></button>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="modal-body">
-            ...
+            <form>
+              <div class="mb-3">
+                <label for="imageUrl" class="form-label">Image URL</label>
+                <input
+                  type="url"
+                  class="form-control"
+                  id="imageUrl"
+                  placeholder="https://example.com/displayImg.png"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="taskTitle" class="form-label">Task Title</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="taskTitle"
+                  placeholder="please enter your task title here.."
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="tags" class="form-label">Task Type</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="tags"
+                  placeholder="please enter your task title here.."
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="taskDescription" class="form-label">
+                  Task Description
+                </label>
+                <textarea
+                  type="text"
+                  class="form-control"
+                  id="taskDescription"
+                  rows="4"
+                  placeholder="please enter your detail task description here.."
+                  required
+                >
+                </textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="submit" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal for viewing the detailed info on the card-->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#showTask">
+      Launch demo modal
+    </button>
+    <!-- showTask button trigger has not been defined yet -->
+    <div
+      class="modal fade"
+      id="showTask"
+      tabindex="-1"
+      aria-labelledby="showTaskLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="showTaskLabel">Modal title</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body task__modal__body">
+            
           </div>
           <div class="modal-footer">
             <button
@@ -82,7 +181,12 @@
             </li>
           </ul>
           <!-- Add a task -->
-          <button class="btn btn-outline-success" type="submit" data-bs-toggle="modal" data-bs-target="#addNewModal">
+          <button
+            class="btn btn-outline-success"
+            type="submit"
+            data-bs-toggle="modal"
+            data-bs-target="#addNewModal"
+          >
             <i class="fas fa-plus"></i>Add New Item
           </button>
         </div>
@@ -111,7 +215,7 @@
 
       <section class="mt-4">
         <div class="row task__contents">
-          <h5>Hey miku the piku</h5>
+          <h5>The place where we can see our card tasks on the screen</h5>
         </div>
       </section>
     </div>
