done with forms

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
-  <body>
+
+  <body onload="loadInitialData()">
+
     <!-- Mobile Toogler Button For Adding A New Item -->
     <div class="add__new__btn__mobile__only">
       <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addNewModal" >
@@ -53,15 +55,14 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Save changes</button>
+            <button type="submit" class="btn btn-primary" onclick="handleSubmit()">Save changes</button>
           </div>
         </div>
       </div>
     </div>
 
     <!-- Modal for viewing the detailed info on the card-->
-    
-    <!-- showTask button trigger has not been defined yet -->
+  
     <div class="modal fade" id="showTask" tabindex="-1" aria-labelledby="showTaskLabel" aria-hidden="true" >
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -111,8 +112,8 @@
       <section class="mt-4">
         <div class="row justify-content-center">
           <div class="col-md-6">
-            <div class="input-group flex-nowrap shadow-lg">
-              <input type="search" class="form-control" placeholder="Search Task" aria-describedby="addon-wrapping" />
+            <div class="input-group flex-nowrap shadow-lg rounded">
+              <input type="search" class="form-control" placeholder="Search Task" aria-describedby="addon-wrapping">
               <span class="input-group-text" id="addon-wrapping">
                 <i class="fas fa-search"></i>
               </span>
@@ -128,39 +129,7 @@
       </section>
     </div>
 
-    <!-- random approach just to show the card on the screen-->
-   <div class='col-md-6 col-lg-4 mt-3'  id=${id} key=${id}>
-        <div class='card shadow task__card'>
-            <div class='card-header d-flex gap-2 justify-content-end task__card__header'>
-                <button type='button' class='btn btn-outline-info mr-2' name=${id}><i class='fas fa-pencil-alt'></i></button>
-                <button type='button' class='btn btn-outline-danger mr-2' name=${id}><i class='fas fa-trash-alt'></i></button>
-            </div>
-            <div class='card-body'>
-                ${
-                    url &&
-                    `<img src=${url} alt='card image' class='card-img-top' md-3 rounded-md'/>`
-                }
-                <h4 class='card-title'>title</h4>
-                <p class='card-text text-muted'>description</p>
-                <div class='tags d-flex flex-wrap'>
-                  <span class='badge text-white bg-primary m-1'>type</span>
-                </div> 
-                <div class='card-footer'>
-                  <button type='button' class='btn btn-outline-primary float-end' data-bs-toggle='modal' data-bs-target='#showTask'>open Task</button>
-                </div>   
-            </div>
-        </div>
-    </div>
-
-    <!-- random modal demo -->
-    <div id=${id}>
-        ${
-            url &&
-            `<img src=${url} alt='card image' class='img-fluid rounded place__holder__image mb-3' />`
-             <strong class='text-sm text-muted' >Created on ${date.toDateString()}</strong>
-             <h4 class='my-2'>${title}</h4>
-             <p class='lead text-muted'>${description}</p>
-         }
+    
 
 
     <!-- Custom JS file -->
