--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF=8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tasky Application</title>
+    <title>Tasky Appln</title>
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="styles.css" />
     <!-- BootStrap CDN -->
@@ -21,8 +21,9 @@
 
     <!-- Mobile Toogler Button For Adding A New Item -->
     <div class="add__new__btn__mobile__only">
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addNewModal" >
-        <i class="fas fa-plus"></i>Add New Item</button>
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addNewModal">
+        <i class="fas fa-plus"></i>Add New Item
+      </button>
     </div>
 
     <!-- Modal for Adding a New Item-->
@@ -66,7 +67,6 @@
     <div class="modal fade" id="showTask" tabindex="-1" aria-labelledby="showTaskLabel" aria-hidden="true" >
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
-
           <div class="modal-header">
             <h1 class="modal-title fs-5" id="showTaskLabel">Task Details</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -84,7 +84,7 @@
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Tasky Application</a>
+        <a class="navbar-brand" href="#">Tasky Appln</a>
 
         <!-- hamberg option/toggler options -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
@@ -128,9 +128,6 @@
         </div>
       </section>
     </div>
-
-    
-
 
     <!-- Custom JS file -->
     <script src="index.js"></script>
